# Arbitrage-cpp

./: CMakeLists.txt  GovernativeFutures.xlsx  HO-LGO.csv  HO-LGO.xlsm  README.md
include/utilities/: Backtest.hpp  DataOrdering.hpp  Loaders.hpp  OptimalBands.hpp  StatisticalBootstrap.hpp
src/: Backtest.cpp  DataOrdering.cpp  Loaders.cpp  OptimalBands.cpp  StatisticalBootstrap.cpp  main.cpp
